# Quick-seismograph

Quick-Node/: .cproject  .project  sdkconfig  sdkconfig.old
Quick-Node/components/dns_server/: dns_server.c
Quick-Node/components/dns_server/include/: dns_server.h
Quick-Node/components/local_server/: CMakeLists.txt  Kconfig.projbuild  keep_alive.c  local_server.c
Quick-Node/components/local_server/include/: keep_alive.h  local_server.h
Quick-Node/components/uart_controller/: uart_controller.c
Quick-Node/components/uart_controller/include/: uart_controller.h
Quick-Node/components/wifi_controller/: CMakeLists.txt  Kconfig.projbuild  wifi_controller.c
Quick-Node/main/: main.c
Quick-Trigger/: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Quick-Trigger/components/dns_server/: CMakeLists.txt  dns_server.c
Quick-Trigger/components/local_server/: CMakeLists.txt  Kconfig.projbuild  keep_alive.c  local_server.c
Quick-Trigger/components/local_server/include/: keep_alive.h  local_server.h
Quick-Trigger/components/uart_controller/: CMakeLists.txt  Kconfig.projbuild  uart_controller.c
Quick-Trigger/components/websocket_client/: CMakeLists.txt  Kconfig.projbuild  websocket_client.c
Quick-Trigger/components/wifi_controller/: CMakeLists.txt  Kconfig.projbuild  wifi_controller.c
Quick-Trigger/main/: main.c
Quick-Trigger/public/: index.html
Quick-Trigger/public/css/: bootstrap-4.min.css  ion.rangeSlider.min.css  template_reduced.css
Quick-Trigger/public/js/: index.js
(+5 files in other folders)
